--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^1.5.2",
+    "@react-native-community/checkbox": "^0.3.0",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/bottom-tabs": "^5.2.1",
     "@react-navigation/native": "^5.1.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-camera": "^3.21.0",
     "react-native-element": "^1.2.1",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-image-picker": "^2.3.1",
     "react-native-ionicons": "^5.0.0-beta",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
